--- a/PromptVerse.html
+++ b/PromptVerse.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
     
     <script src="https://cdn.tailwindcss.com"></script>
+    <script type="module" src="js/supabase-config.js"></script>
+<script type="module" src="js/auth.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
@@ -179,3 +181,4 @@
     </script>
 </body>
 </html>
+
